@@ -8,8 +8,8 @@
         <rect>
             <x>0</x>
             <y>0</y>
-            <width>372</width>
-            <height>460</height>
+            <width>312</width>
+            <height>417</height>
         </rect>
     </property>
     <property name="sizePolicy">
